--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+til{
+	font-size: 30px;
+	font-weight: bold;
+	font-family: Helvetica;
+	color: #008080;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+
+sectil{
+	font-size: 25px;
+	font-weight: bold;
+	font-family: Arial;
+	text-decoration: underline;
+}
+
+p {
+	font-family: sans-serif;
+}
